	The image is created as a PNG image using either the libgd or libcairo
	library depending on which (if either) is present in the current build
	of gnuplot.  The /FlateDecode method is only used if the terminal option
	"level3" is given to "set term post".

2013-04-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c:  Incomplete initiailization of sample range variable.

2013-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/term_api.h term/svg.trm:
	Use actual plot title as the <title> attribute of svg plot elements.
	If there is no plot title, use name_plotno_panelno as before.

	* src/qtterminal/QtGnuplotScene.cpp (processEvent):  Fix off-by-one
	iteration over visibility of plots after a zoom or other replot.

2013-03-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/misc.c (lp_parse):  The "fillcolor|fc" keyword
	in a plot command was not correctly parsed.

	* src/term.c (term_apply_lp_properties): A patch of 2013-01-08
	switched to always applying linetype color even if the use_palette
	flag was not set.  This broke the TERM_MONOCHROME setting on terminals
	that have it, as seen in the "test" command.
	Handle monochrome terminals as a special case.
	Bug #1225

2013-03-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c:
	Combined mousing revisions from Michael Madsen, Petr Mikulik, and
	Mojca Miklavec.
	Zoom in/out around current mouse position rather than center of plot.

	+/- keys             zoom in/out on mouse position
	<wheel-up>           scroll up (in +Y direction)
	<wheel-down>         scroll down.
	<shift-wheel-up>     scroll left (in -X direction)
	<shift-wheel-down>   scroll right.
	<Control-WheelUp>    zoom in on mouse position
	<Control-WheelDown>  zoom out on mouse position
	<Shift-Control-WheelUp>    pinch on x
	<Shift-Control-WheelDown>  expand on x

2013-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/plot2d.c src/plot3d.c: