@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.292 2013/03/22 03:48:55 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.293 2013/04/01 22:15:14 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -1976,6 +1976,9 @@ eval_plots()
 		    c_token++;
 
 		    switch(found_token) {
+		    case SMOOTH_FREQUENCY:
+			this_plot->plot_smooth = found_token;
+			break;
 		    case SMOOTH_KDENSITY:
 			this_plot->smooth_parameter = -1; /* Default */
 			if (almost_equals(c_token,"band$width")) {
@@ -1988,17 +1991,16 @@ eval_plots()
 		    case SMOOTH_CSPLINES:
 		    case SMOOTH_SBEZIER:
 		    case SMOOTH_UNIQUE:
-		    case SMOOTH_FREQUENCY:
 		    case SMOOTH_CUMULATIVE:
 		    case SMOOTH_CUMULATIVE_NORMALISED:
 			this_plot->plot_smooth = found_token;
+			this_plot->plot_style = LINES;
 			break;
 		    case SMOOTH_NONE:
 		    default:
-			int_error(c_token, "expecting 'unique', 'frequency', 'cumulative', 'cnormal', 'kdensity', 'acsplines', 'csplines', 'bezier' or 'sbezier'");
+			int_error(c_token, "unrecognized 'smooth' option");
 			break;
 		    }
-		    this_plot->plot_style = LINES;
 		    set_smooth = TRUE;
 		    continue;
 		}
